--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,18 @@ environment:
   sdk: ^3.5.1
 
 dependencies:
+  dio: ^5.7.0
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.2.1
+  logger: ^2.4.0
 
 dev_dependencies:
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
+  assets:
+    - .env
