Add AppRouter, AppRoutes, and DI setup
More detailed explanatory text:

This commit introduces the following changes:

1. Added `AppRouter` class to handle the app's navigation routes. It defines the routes for login, movies, and movie details views.
2. Added `AppRoutes` class to define the route names as constants.
3. Implemented the dependency injection (DI) setup using `get_it` package. The setup includes registering singletons and factories for various providers and repositories.
4. Updated the `main.dart` file to use the `AppRouter` and DI setup to navigate between views based on the user's login status.

The commit lays the foundation for the app's navigation and dependency management, which will be essential for the app's overall structure and maintainability.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,16 @@ environment:
   sdk: ^3.5.1
 
 dependencies:
+  cached_network_image: ^3.4.1
+  dartz: ^0.10.1
   dio: ^5.7.0
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.2.1
-  logger: ^2.4.0
+  get_it: ^8.0.2
+  provider: ^6.1.2
+  shared_preferences: ^2.3.2
+  skeletonizer: ^1.4.2
 
 dev_dependencies:
   flutter_lints: ^4.0.0
