--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.2.1
   get_it: ^8.0.2
+  lottie: ^3.1.3
   provider: ^6.1.2
   shared_preferences: ^2.3.2
   skeletonizer: ^1.4.2
@@ -27,3 +28,4 @@ flutter:
   uses-material-design: true
   assets:
     - .env
+    - assets/json/
