--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   provider: ^6.1.2
   shared_preferences: ^2.3.2
   skeletonizer: ^1.4.2
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_lints: ^4.0.0
@@ -32,3 +34,5 @@ flutter:
   assets:
     - .env
     - assets/json/
+flutter_intl:
+  enabled: true
