--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   skeletonizer: ^1.4.2
   flutter_localizations:
     sdk: flutter
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_lints: ^4.0.0
