--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,16 +14,17 @@ dependencies:
   dio_cache_interceptor_hive_store: ^3.2.2
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6
   flutter_dotenv: ^5.2.1
+  flutter_localizations:
+    sdk: flutter
   get_it: ^8.0.2
+  intl: ^0.19.0
   lottie: ^3.1.3
   path_provider: ^2.1.5
   provider: ^6.1.2
   shared_preferences: ^2.3.2
   skeletonizer: ^1.4.2
-  flutter_localizations:
-    sdk: flutter
-  intl: ^0.19.0
 
 dev_dependencies:
   flutter_lints: ^4.0.0
